Fix footer overlap and restore sitemap link

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -13,11 +13,8 @@
   width: 100%;
   clear: both;
 
-  /* sticky footer fix start */
-  position: absolute;
-  bottom: 0em;
-  height: auto;
-  /* sticky footer fix end */
+  /* Keep footer in normal document flow to avoid overlapping sidebar/content */
+  position: static;
 
   margin-top: 3em;
 
